add integration test for product/posts/search